Jun-2022/kuard-pod-hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: kuard-pod-hostpath
  name: kuard-pod-hostpath
spec:
  nodeSelector:
    node: node1
  volumes:
  - name: "kuard-data"
    hostPath:
      path: "/app-data"
  containers:
  - image: gcr.io/kuar-demo/kuard-amd64:1
    name: kuard
    volumeMounts:
    - mountPath: "/data"
      name: "kuard-data"
