Jun-2022/kuard-pod-lp-enabled.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: kuard-pod-lp-enabled
  name: kuard-pod-lp-enabled
spec:
  containers:
  - image: gcr.io/kuar-demo/kuard-amd64:1
    name: kuard
    livenessProbe:
      httpGet:
        path: /
        port: 8080
      initialDelaySeconds: 3
      periodSeconds: 10
      timeoutSeconds: 1
      failureThreshold: 3
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
