Jun-2022/limitrange-test-pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: limitrange-test-pod2
  name: limitrange-test-pod2
spec:
  containers:
  - image: gcr.io/kuar-demo/kuard-amd64:1
    name: kuard
    resources:
      requests:
        cpu: "2"
        memory: "1Gi"
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
