Jun-2022/nginx-configmap-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-configmap-pod
spec:
  volumes:
  - name: config-volume
    configMap:
      name: nginx-config
  containers:
  - image: nginx
    name: nginx-configmap-pod
    volumeMounts:
    - name: config-volume
      mountPath: /nginx.conf
      subPath: nginx-proxy.conf
