Jun-2022/nginx-nobody-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx-nobody-pod
  name: nginx-nobody-pod
spec:
  securityContext:
    runAsUser: 65534
    fsGroup: 65534
  containers:
  - image: nginx
    name: nginx-nobody-pod
