Jun-2022/web2-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web2
  labels:
    app: web2
    team: dev
spec:
  containers:
  - image: nginx
    name: web2
