Jun-2022/web3-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: web3
  annotations:
    team: dev
  name: web3-pod
spec:
  containers:
  - image: nginx
    name: web3-pod
    ports:
    - containerPort: 80
