Jun-2022/wordpress-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: wordpress3
  name: wordpress-pod
spec:
  containers:
  - image: wordpress
    name: wordpress
    ports:
    - containerPort: 80
  - image: mysql
    name: mysql
    ports:
    - containerPort: 3306
