Jun-2022/headless-nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless-nginx-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  selector:
    app: nginx
