Jun-2022/nginx-lb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30890
  selector:
    app: nginx
  type: LoadBalancer
