Jun-2022/qa-allow-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: qa-allow-netpol
spec:
  podSelector: 
    matchLabels:
      env: qa
  ingress:
  - from:
    - podSelector:
        matchLabels:
          env: qa
